english page added

--- a/index-fr.html
+++ b/index-fr.html
@@ -13,11 +13,17 @@
       <div class="logo">Johann Sourou</div>
       <div>
         <ul class="nav-links">
+          <!---
           <li><a href="#about">About</a></li>
           <li><a href="#experience">Experience</a></li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#contact">Contact</a></li>
-          <li><a href="index-fr.html">FR Version</a></li>
+         --->
+          <li><a href="#about">À Propos</a></li>
+          <li><a href="#experience">Expérience</a></li>
+          <li><a href="#projects">Projets</a></li>
+          <li><a href="#contact">Contact</a></li>
+          <li><a href="index-en.html">Version EN</a></li>
         </ul>
       </div>
     </nav>
@@ -30,8 +36,8 @@
           <span></span>
         </div>
         <div class="menu-links">
-          <li><a href="#about" onclick="toggleMenu()">About</a></li>
-          <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
+          <li><a href="#about" onclick="toggleMenu()">À Propos</a></li>
+          <li><a href="#experience" onclick="toggleMenu()">Expérience</a></li>
           <li><a href="#projects" onclick="toggleMenu()">Projets</a></li>
           <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
         </div>
@@ -48,18 +54,18 @@
         />
       </div>
       <div class="section__text">
-        <p class="section__text__p1">Hi, my name is</p>
+        <p class="section__text__p1">Salut, mon nom est</p>
         <h1 class="title">Johann Sourou</h1>
-        <p class="section__text__p2">Aspiring Full Stack Developer</p>
+        <p class="section__text__p2">Développeur Full Stack Aspirant</p>
         <div class="btn-container">
           <button
             class="btn btn-color-2"
             onclick="window.open('./assets/JohannCvFR.pdf')"
           >
-            Download CV
+            Télécharger mon CV
           </button>
           <button class="btn btn-color-1" onclick="location.href='#contact'">
-            Contact
+            Coordonnées
           </button>
         </div>
         <div id="socials-container">
@@ -81,8 +87,8 @@
 
     <!-- About Section -->
     <section id="about">
-      <p class="section__text__p1">Learn more</p>
-      <h1 class="title">About me</h1>
+      <p class="section__text__p1">En Savoir Plus</p>
+      <h1 class="title">À Propos de moi</h1>
       <div class="section-container">
         <div class="section__pic-container">
           <img
@@ -94,34 +100,35 @@
         <div class="about-details-container">
           <div class="about-containers">
             <!---- <div class="details-container">
-                <img
-                  src="./assets/experience.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <h3>Experience</h3>
-                <p>2+ years <br />Frontend Development</p>
-              </div> ---->
+              <img
+                src="./assets/experience.png"
+                alt="Experience icon"
+                class="icon"
+              />
+              <h3>Experience</h3>
+              <p>2+ years <br />Frontend Development</p>
+            </div> ---->
             <div class="details-container">
               <img
                 src="./assets/education.png"
                 alt="Education icon"
                 class="icon"
               />
-              <h3>Education</h3>
-              <p>B.Sc. Mathematics and Computer Science</p>
+              <h3>Éducation</h3>
+              <p>Baccalauréat en mathématique et informatique</p>
             </div>
           </div>
           <div class="text-container">
             <p style="text-align: justify">
-              Student in Mathematics and Computer Science, passionate about
-              software development, programming and data analysis. I am
-              particularly interested in applying my computer science skills to
-              solve real-world problems. Currently, I am looking for
-              opportunities to deepen my knowledge in software development and
-              contribute to innovative projects. Motivated and curious, I am
-              ready to bring my analytical expertise to dynamic teams and
-              exciting projects.
+              Étudiant en Mathématiques et Informatique, passionné par le
+              développement logiciel, la programmation et l'analyse de données.
+              Je suis particulièrement intéressé par l'application de mes
+              compétences en informatique pour résoudre des problèmes concrets.
+              Actuellement, je cherche des opportunités pour approfondir mes
+              connaissances en développement logiciel et contribuer à des
+              projets innovants. Motivé et curieux, je suis prêt à apporter mon
+              expertise analytique à des équipes dynamiques et à des projets
+              passionnants.
             </p>
           </div>
         </div>
@@ -130,12 +137,12 @@
 
     <!-- Experience Section -->
     <section id="experience">
-      <p class="section__text__p1">Explore my</p>
-      <h1 class="title">Experience</h1>
+      <p class="section__text__p1">Découvrez mon</p>
+      <h1 class="title">Expérience</h1>
       <div class="experience-details-container">
         <div class="about-containers">
           <div class="details-container">
-            <h2 class="experience-sub-title">Frontend Developement</h2>
+            <h2 class="experience-sub-title">Développement Frontend</h2>
             <div class="article-container">
               <article>
                 <img
@@ -145,7 +152,7 @@
                 />
                 <div>
                   <h3>HTML</h3>
-                  <p>Basic</p>
+                  <p>Base</p>
                 </div>
               </article>
               <article>
@@ -156,7 +163,7 @@
                 />
                 <div>
                   <h3>CSS</h3>
-                  <p>Basic</p>
+                  <p>Base</p>
                 </div>
               </article>
               <article>
@@ -167,7 +174,7 @@
                 />
                 <div>
                   <h3>JavaScript</h3>
-                  <p>Basic</p>
+                  <p>Base</p>
                 </div>
               </article>
               <article>
@@ -178,13 +185,13 @@
                 />
                 <div>
                   <h3>Flutter</h3>
-                  <p>Intermediate</p>
+                  <p>Intermédiaire</p>
                 </div>
               </article>
             </div>
           </div>
           <div class="details-container">
-            <h2 class="experience-sub-title">Backend Developement</h2>
+            <h2 class="experience-sub-title">Développement Backend</h2>
             <div class="article-container">
               <article>
                 <img
@@ -194,7 +201,7 @@
                 />
                 <div>
                   <h3>PostgreSQL</h3>
-                  <p>Basic</p>
+                  <p>Base</p>
                 </div>
               </article>
               <article>
@@ -205,7 +212,7 @@
                 />
                 <div>
                   <h3>Node JS</h3>
-                  <p>Basic</p>
+                  <p>Base</p>
                 </div>
               </article>
               <article>
@@ -216,7 +223,7 @@
                 />
                 <div>
                   <h3>Express JS</h3>
-                  <p>Intermediate</p>
+                  <p>intermédiaire</p>
                 </div>
               </article>
               <article>
@@ -227,7 +234,7 @@
                 />
                 <div>
                   <h3>TypeScript</h3>
-                  <p>Intermediate</p>
+                  <p>intermédiaire</p>
                 </div>
               </article>
               <article>
@@ -238,7 +245,7 @@
                 />
                 <div>
                   <h3>Java</h3>
-                  <p>Intermediate</p>
+                  <p>Intermédiaire</p>
                 </div>
               </article>
               <article>
@@ -249,7 +256,7 @@
                 />
                 <div>
                   <h3>Python</h3>
-                  <p>Intermediate</p>
+                  <p>Intermédiaire</p>
                 </div>
               </article>
               <article>
@@ -260,7 +267,7 @@
                 />
                 <div>
                   <h3>Git</h3>
-                  <p>Intermediate</p>
+                  <p>Intermédiaire</p>
                 </div>
               </article>
             </div>
@@ -271,9 +278,8 @@
 
     <!-- Projects Section -->
     <section id="projects">
-      <p class="section__text__p1">Browse My Recent</p>
-      <h1 class="title">Projects</h1>
-
+      <p class="section__text__p1">Parcourez</p>
+      <h1 class="title">mes projets récents</h1>
       <div class="experience-details-container">
         <div class="about-containers">
           <div class="details-container color-container">
@@ -285,7 +291,7 @@
               />
             </div>
             <h2 class="experience-sub-title project-title">
-              Mobile application for managing a student café
+              Application moblie pour la gestion d'un café étudiant
             </h2>
             <div class="btn-container">
               <button
@@ -298,7 +304,7 @@
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://drive.google.com/file/d/1GNoI4bMbtajqU7q1QDSAhnXwuJLLPN5n/view?usp=sharing'"
               >
-                Live Demo
+                Démonstration
               </button>
             </div>
           </div>
@@ -356,8 +362,8 @@
 
     <!-- Contact Section -->
     <section id="contact">
-      <p class="section__text__p1">Get In Touch</p>
-      <h1 class="title">Contact Me</h1>
+      <p class="section__text__p1">Entrer en Contact</p>
+      <h1 class="title">Contactez-moi</h1>
       <div class="contact-info-upper-container">
         <div class="contact-info-container">
           <img
@@ -389,9 +395,9 @@
       <nav>
         <div class="nav-links-container">
           <ul class="nav-links">
-            <li><a href="#about">About</a></li>
-            <li><a href="#experience">Experience</a></li>
-            <li><a href="#projects">Projects</a></li>
+            <li><a href="#about">À Propos</a></li>
+            <li><a href="#experience">Expérience</a></li>
+            <li><a href="#projects">Projets</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
