--- a/index-fr.html
+++ b/index-fr.html
@@ -23,7 +23,7 @@
           <li><a href="#experience">Expérience</a></li>
           <li><a href="#projects">Projets</a></li>
           <li><a href="#contact">Contact</a></li>
-          <li><a href="index-en.html">Version EN</a></li>
+          <li><a href="index.html">Version EN</a></li>
         </ul>
       </div>
     </nav>
@@ -60,7 +60,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/JohannCvFR.pdf')"
+            onclick="window.open('./assets/CV_fr.pdf')"
           >
             Télécharger mon CV
           </button>
